--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,8 @@
 }
 
 /* Reset default margins and paddings */
-html,
-body {
+
+html,body {
   margin: 0;
   padding: 0;
   height: 100%;
@@ -15,6 +15,7 @@ body {
   font-family: var(--font-family-secondary);
   background-color: var(--primary-bg-color);
   color: var(--primary-text-color);
+  scroll-behavior: smooth;
 }
 
 /* Define CSS variables */
